set(MODULE_NAME Australis-extra_gpsacquisition)

# ╔══════════════════════════════════════════════════════════╗
# ║                         SOURCES                          ║
# ╚══════════════════════════════════════════════════════════╝

add_library(${MODULE_NAME} OBJECT)
target_sources(${MODULE_NAME}
  PRIVATE
    src/gpsacquisition.c
)
target_link_options(${MODULE_NAME} BEFORE PUBLIC
  "-T${CMAKE_CURRENT_LIST_DIR}/gpspub.ld"
)

# ╔══════════════════════════════════════════════════════════╗
# ║                         INCLUDES                         ║
# ╚══════════════════════════════════════════════════════════╝

target_include_directories(${MODULE_NAME}
  PUBLIC
    inc/
)
target_include_directories(Australis-extra_headers
  INTERFACE
    inc/
)

target_link_libraries(${MODULE_NAME} 
  PUBLIC
    Australis-core_headers 
  PRIVATE
    Australis-extra_sam_m10q
    Australis-core_privateheaders
)
